[package]
name = "oktopass"
version = "0.9.2"
edition = "2024"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
copypasta-ext = { version = "0.4.4", features = ["x11-bin", "wayland-bin"] }
dirs = "6.0.0"
rand = "0.9.1"
rand-extra = "0.1.0"
rpassword = "7.4.0"
serde = { version =  "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
